# DQMSDHCAL

./: .gitignore  .project  CMakeLists.txt  INSTALL.txt  README.txt
SDHCALMONITOR/Shower/: CMakeLists.txt
SDHCALMONITOR/Shower/source/: DQMSDHCALMonitor.cc  DQMShowerAnalyzer.cc  DQMShowerAnalyzer.cc~  DQMTrackAnalyzer.cc  ExampleModule.cc  ExampleModule.h
SDHCALMONITOR/Shower/xml/: SteeringFileExampleModule.json  SteeringFileExampleModule.xml
SDHCALMONITOR/Tracking/: CMakeLists.txt
SDHCALMONITOR/Tracking/lib/: libExampleModule.so...
SDHCALMONITOR/Tracking/source/: DQMSDHCALMonitor.h  DQMTrackAnalyzer.h  ExampleModule.cc  ExampleModule.h
SDHCALMONITOR/Tracking/xml/: SteeringFileExampleModule.xml  chinese_avril2015.xml  chinese_avril2015_1.xml  tricot.xml
config/: AsicAnalysisModule.json  AsicAnalysisModule.xml  BeamAnalysisModule.xml  DHCAL_732120_I0_1_shm_config.xml  ECalAnalysisModule.xml  EventDisplayModule.xml  FSlowControlModule.xml  HitAnalysisModule.xml  HoughTransformModule.xml  NoiseAnalysisModule.xml  ParticleIDModule.xml  RawAnalysisModule.xml  SDHCAL_SPS_06_2016.xml  SDHCAL_SPS_06_2016_OFFLINE.xml  SDHCAL_SPS_10_2015_OFFLINE.xml  SDHCAL_SPS_10_2015_OFFLINE.xml~  SiWECal_SDHCAL_SPS_06_2016.xml  SlowControlModule.xml  geometry_SPS_08_2012.xml  m3_avril2015.json  raw_data_converter.json  setup_geometry2015.xml  setup_geometry_gif++.xml  setup_geometry_nov.xml
config/SPS_09_2017/: ShmDriver.xml  ShmDriver.xml~  sdhcal_07_09_2017.xml
config/SPS_09_2018/: #geometry_01_10_2018.xml#  ShmDriver.xml  ShmDriver.xml~  geometry_01_10_2018.xml  geometry_01_10_2018.xml~
config/SiWECal_SDHCAL_SPS_06_2016/: ShmProcessors_SDHCAL_Cherenkov.xml  ShmProcessors_SiWECal_SDHCAL_Cherenkov.xml
source/: CMakeLists.txt
source/common/: CMakeLists.txt
source/common/include/: AnalysisTools.h  DIF.h  DIFReadoutConstant.h  DIFUnpacker.h  DQMTriventModule.h  DataConverters.h  Decoder.h  ECalHelper.h  ElectronicsMapping.h  Geometry.h  Layer.h  SDHCALElectronicsMapping.h  ShmProcessors.h  Streamout.h  ThreeVector.hh  Trivent.h
source/common/main/: dqmsdhcal_dump_db_geometry.cc  dqmsdhcal_start_shm_publisher.cc  dqmsdhcal_start_shm_reader.cc
source/common/src/: AnalysisTools.cc  DIF.cc  DIFUnpacker.cc  DQMTriventModule.cc  DataConverters.cc  Decoder.cc  Distance.cc  ECalHelper.cc  ElectronicsMapping.cc  Geometry.cc  Layer.cc  Linear3DFit.cc  SDHCALElectronicsMapping.cc  ShmProcessors.cc  ShmReader.cc  Streamout.cc  TrackingAlgo.cc  Trivent.cc
source/include/: SDHCALDetectorModule.h
source/include/dqmsdhcal/daq/: DIF.h  Decoder.h  Mapping.h  ShmReader.h
source/include/dqmsdhcal/modules/: AsicAnalysisModule.h  TestRawDataModule.h
source/include/dqmsdhcal/selectors/: PionSelector.h
source/include/dqmsdhcal/services/: DQMRawDataConverterApplication.h
source/include/dqmsdhcal/streamout/: Streamout.h
source/include/dqmsdhcal/trivent/: Trivent.h
source/main/: dqmsdhcal_start_raw_data_converter.cc  dqmsdhcal_start_shm_reader.cc  start_sdhcal_shm_reader.cc
source/modules/: CMakeLists.txt
source/modules/AsicAnalysisModule/: AsicAnalysisModule.cc  AsicAnalysisModule.h
source/modules/BeamAnalysisModule/: BeamAnalysisModule.cc  BeamAnalysisModule.h
source/modules/ECalAnalysisModule/: ECalAnalysisModule.cc  ECalAnalysisModule.h
source/modules/EventDisplayModule/: EventDisplayModule.cc  EventDisplayModule.h
source/modules/FSlowControlModule/: FSlowControlModule.cc  FSlowControlModule.h
source/modules/HitAnalysisModule/: HitAnalysisModule.cc  HitAnalysisModule.h
source/modules/HoughTransformModule/: HoughTransformModule.cc  HoughTransformModule.h
source/modules/NoiseAnalysisModule/: NoiseAnalysisModule.cc  NoiseAnalysisModule.h
source/modules/ParticleIDModule/: ParticleIDModule.cc  ParticleIDModule.h
source/modules/RawAnalysisModule/: RawAnalysisModule.cc  RawAnalysisModule.h
source/modules/SlowControlModule/: SlowControlModule.cc  SlowControlModule.h
source/src/: SDHCALDetectorModule.cc
source/src/asicAnalysisTools/: Cluster.cc  Distance.cc  Layer.cc  PCA.cc  Track.cc  TrackingAlgo.cc
source/src/daq/: DIF.cc  DIFUnpacker.cc  Decoder.cc  ShmReader.cc
source/src/modules/: AsicAnalysisModule.cc  TestRawDataModule.cc
source/src/selectors/: PionSelector.cc
source/src/services/: DQMRawDataConverterApplication.cc
source/src/streamout/: Streamout.cc
source/src/trivent/: Trivent.cc
xml/: SDHCALDetectorModule.xml  TestRawDataModule.xml
